Stop navigation being delete when working on demo site

--- a/parts/header.html
+++ b/parts/header.html
@@ -9,7 +9,9 @@
 <!-- /wp:group -->
 
 <!-- wp:group {"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"left"}} -->
-<div class="wp-block-group"><!-- wp:navigation /--></div>
-<!-- /wp:group --></div>
+<div class="wp-block-group"></div>
+<!-- /wp:group -->
+
+<!-- wp:navigation {"ref":79} /--></div>
 <!-- /wp:group --></div>
 <!-- /wp:group -->
