--- a/parts/footer.html
+++ b/parts/footer.html
@@ -1,13 +1,36 @@
-<!-- wp:group {"layout":{"inherit":true}} -->
-<div class="wp-block-group">
-	<!-- wp:group {"style":{"spacing":{"padding":{"top":"80px","bottom":"30px"}}}} -->
-	<div class="wp-block-group" style="padding-top: 80px; padding-bottom: 30px">
-		<!-- wp:paragraph {"align":"center"} -->
-		<p class="has-text-align-center">
-			Proudly Powered by
-			<a href="https://wordpress.org" rel="nofollow">WordPress</a>
-		</p>
-		<!-- /wp:paragraph -->
+<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|10","bottom":"var:preset|spacing|10","left":"var:preset|spacing|10","right":"var:preset|spacing|10"}}},"layout":{"type":"constrained"}} -->
+<div
+	class="wp-block-group"
+	style="
+		padding-top: var(--wp--preset--spacing--10);
+		padding-right: var(--wp--preset--spacing--10);
+		padding-bottom: var(--wp--preset--spacing--10);
+		padding-left: var(--wp--preset--spacing--10);
+	"
+>
+	<!-- wp:group {"align":"wide","layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
+	<div class="wp-block-group alignwide">
+		<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"}} -->
+		<div class="wp-block-group">
+			<!-- wp:site-logo {"width":60} /-->
+
+			<!-- wp:navigation {"ref":283} /-->
+		</div>
+		<!-- /wp:group -->
+
+		<!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap"}} -->
+		<div class="wp-block-group">
+			<!-- wp:social-links -->
+			<ul class="wp-block-social-links">
+				<!-- wp:social-link {"service":"x"} /-->
+
+				<!-- wp:social-link {"service":"facebook"} /-->
+
+				<!-- wp:social-link {"service":"instagram"} /-->
+			</ul>
+			<!-- /wp:social-links -->
+		</div>
+		<!-- /wp:group -->
 	</div>
 	<!-- /wp:group -->
 </div>
